--- a/Studentmanagement/pom.xml
+++ b/Studentmanagement/pom.xml
@@ -98,6 +98,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<!-- Build -->
